--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -9,6 +9,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v4
+        with:
+          go-version: 1.21.x
       - name: Display Go version
         run: go version
       - name: Test
